tests/file_test/testdata/let_rhs_missing_rparen.expected
tests/file_test/testdata/let_rhs_missing_rparen.llang: error: unexpected end of file, operator `+` must be followed by an expression
    1|let a = (2 + 
     |           ~~
context: not a valid expression between `()`
context: expect an expression after `=` for a definition

